--- a/source/form.html
+++ b/source/form.html
@@ -34,14 +34,19 @@
   <link href="pixel-glass/styles.css" rel="stylesheet">
   <script src="pixel-glass/script.js"></script>
   <!-- // Pixel Glass -->
+  <script src="js/picturefill.js"></script>
 </head>
 <body>
 
 <header class="page-header">
   <div class="page-header__wrapper container">
     <a class="page-logo" href="index.html">
-      <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
-      <img class="page-logo__title" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
+      </picture>
+      <img class="page-logo__title page-logo__title--header" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
     </a>
     <nav class="page-nav page-nav--no-js">
       <button class="page-nav__toggle" type="button">Показать меню</button>
