--- a/source/index.html
+++ b/source/index.html
@@ -40,8 +40,12 @@
   <header class="page-header page-header--index">
     <div class="page-header__wrapper container">
       <a class="page-logo page-logo--index">
-        <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
-        <img class="page-logo__title" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
+        </picture>
+        <img class="page-logo__title page-logo__title--header" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
       </a>
       <nav class="page-nav page-nav--no-js">
         <button class="page-nav__toggle" type="button">Показать меню</button>
@@ -159,10 +163,18 @@
 
           <div class="slider__images">
             <div class="slider__image slider__image--before">
-              <img src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+                <img srcset="img/before-mobile@1x.png 1x, img/before-mobile@2x.png 2x" width="320" height="240" alt="Толстый кот">
+              </picture>
             </div>
             <div class="slider__image slider__image--after">
-              <img src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+                <img srcset="img/after-mobile@1x.png 1x, img/after-mobile@2x.png 2x" width="320" height="240" alt="Худой кот">
+              </picture>
             </div>
           </div>
           <div class="slider__actions">
