--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,8 +70,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                <img srcset="img/chicken-small-mobile@1x.jpg 1x, img/chicken-small-mobile@2x.jpg 2x"
-                     alt="Cat Energy Pro 500 г Курица" width="140" height="144">
+                <img srcset="img/chicken-small-mobile@1x.jpg 1x, img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Курица" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -100,8 +99,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                <img srcset="img/chicken-big-mobile@1x.jpg 1x, img/chicken-big-mobile@2x.jpg 2x"
-                     alt="Cat Energy Pro 1000 г Курица" width="140" height="144">
+                <img srcset="img/chicken-big-mobile@1x.jpg 1x, img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Курица" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
