Исправил src в тегах img

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,7 +70,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                <img srcset="img/chicken-small-mobile@1x.jpg 1x, img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Курица" width="140" height="144">
+                <img src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Курица" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -99,7 +99,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                <img srcset="img/chicken-big-mobile@1x.jpg 1x, img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Курица" width="140" height="144">
+                <img src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Курица" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -128,7 +128,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                <img srcset="img/fish-small-mobile@1x.jpg 1x, img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
+                <img src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -157,7 +157,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                <img srcset="img/fish-big-mobile@1x.jpg 1x, img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Рыба" width="140" height="144">
+                <img src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Рыба" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -186,7 +186,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                <img srcset="img/buckwheat-small-mobile@1x.jpg 1x, img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
+                <img src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -215,7 +215,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                <img srcset="img/buckwheat-big-mobile@1x.jpg 1x, img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
+                <img src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
             <div class="product__content">
@@ -244,7 +244,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                <img srcset="img/rice-small-mobile@1x.jpg 1x, img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
+                <img src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
               <!--<img src="img/rice-small-mobile@1x.jpg" alt="Cat Energy Slim 500 г Рис" width="140" height="144">-->
             </div>
