--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
         <picture class="intro__image-wrapper">
           <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-          <img class="intro__image" srcset="img/index-can-mobile@1x.png 1x, img/index-can-mobile@2x.png 2x" alt="Внешний вид товара" width="280" height="270">
+          <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Внешний вид товара" width="280" height="270">
         </picture>
         <a class="intro__content intro__btn theme__btn" href="form.html">
           Подобрать программу
@@ -166,14 +166,14 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-                <img srcset="img/before-mobile@1x.png 1x, img/before-mobile@2x.png 2x" width="320" height="240" alt="Толстый кот">
+                <img src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" width="320" height="240" alt="Толстый кот">
               </picture>
             </div>
             <div class="slider__image slider__image--after">
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
-                <img srcset="img/after-mobile@1x.png 1x, img/after-mobile@2x.png 2x" width="320" height="240" alt="Худой кот">
+                <img src="img/before-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" width="320" height="240" alt="Худой кот">
               </picture>
             </div>
           </div>
