--- a/source/form.html
+++ b/source/form.html
@@ -46,8 +46,7 @@
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
         <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
       </picture>
-      <img class="page-logo__title page-logo__title--header" src="img/logo-mobile-header.svg" alt="Cat Energy"
-           width="101" height="18">
+      <img class="page-logo__title page-logo__title--header" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
     </a>
     <nav class="page-nav page-nav--no-js">
       <button class="page-nav__toggle" type="button">Показать меню</button>
@@ -111,8 +110,7 @@
           </li>
           <li class="form-unit__list-item">
             <label class="form-unit__item theme__block-title">
-              <input type="radio" name="Программа" value="Не знаю (Нужен ваш совет)"
-                     class="form-unit__radio visually-hidden">
+              <input type="radio" name="Программа" value="Не знаю (Нужен ваш совет)" class="form-unit__radio visually-hidden">
               <span class="form-unit__label form-unit__label--radio">Не знаю (Нужен ваш совет)</span>
             </label>
           </li>
@@ -128,9 +126,7 @@
             <span class="form-unit__label">E-mail:*</span>
             <span class="form-unit__input-wrapper">
               <input type="email" class="form-unit__input" name="E-mail" placeholder="kuklachev@gmail.com" required>
-              <svg class="form-unit__icon" xmlns="http://www.w3.org/2000/svg" width="17" height="13"
-                   viewBox="0 0 17 13"><path
-                d="M15.6 11.6H1.4V5.8H0V13h17V5.8h-1.4v5.8zM0 0v2.3l8.5 7.1L17 2.3V0H0zm15.6 1.6L8.5 7.5 1.4 1.6v-.2h14.2v.2z"/></svg>
+              <svg class="form-unit__icon" xmlns="http://www.w3.org/2000/svg" width="17" height="13" viewBox="0 0 17 13"><path d="M15.6 11.6H1.4V5.8H0V13h17V5.8h-1.4v5.8zM0 0v2.3l8.5 7.1L17 2.3V0H0zm15.6 1.6L8.5 7.5 1.4 1.6v-.2h14.2v.2z"/></svg>
             </span>
           </label>
         </p>
@@ -139,9 +135,7 @@
             <span class="form-unit__label">Телефон:*</span>
             <span class="form-unit__input-wrapper">
               <input type="tel" class="form-unit__input" name="Телефон" placeholder="8 (960) 900-60-90" required>
-              <svg class="form-unit__icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                   viewBox="0 0 20 20"><path
-                d="M17.9 9.4H9.4v1.2h8.5l-2.1 2.1.9.9 3.1-3.1c.2-.2.2-.6 0-.9l-3.1-3.1-.9.9 2.1 2zM8.1 19.4v-6.2c0-.3-.3-.6-.6-.6H3.1c0 .7.6 1.2 1.2 1.2h2.5v5H3.1c-1 .1-1.8-.7-1.9-1.7v-14c0-1 .8-1.8 1.7-1.8H6.8v5H4.4c-.7 0-1.2.6-1.2 1.2h4.4c.3 0 .6-.3.6-.6V.6C8.1.3 7.8 0 7.5 0H3.1A3 3 0 0 0 0 2.9V16.8c-.1 1.7 1.2 3.1 2.9 3.1H7.5c.3.1.6-.2.6-.5z"/></svg>
+              <svg class="form-unit__icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path d="M17.9 9.4H9.4v1.2h8.5l-2.1 2.1.9.9 3.1-3.1c.2-.2.2-.6 0-.9l-3.1-3.1-.9.9 2.1 2zM8.1 19.4v-6.2c0-.3-.3-.6-.6-.6H3.1c0 .7.6 1.2 1.2 1.2h2.5v5H3.1c-1 .1-1.8-.7-1.9-1.7v-14c0-1 .8-1.8 1.7-1.8H6.8v5H4.4c-.7 0-1.2.6-1.2 1.2h4.4c.3 0 .6-.3.6-.6V.6C8.1.3 7.8 0 7.5 0H3.1A3 3 0 0 0 0 2.9V16.8c-.1 1.7 1.2 3.1 2.9 3.1H7.5c.3.1.6-.2.6-.5z"/></svg>
             </span>
           </label>
         </p>
@@ -153,8 +147,7 @@
       <div class="container">
         <p class="form-unit__row form-unit__row--textarea">
           <label class="form-unit__item theme__block-title">
-            <textarea class="form-unit__input form-unit__input--textarea" name="Комментарий" cols="28" rows="4"
-                      placeholder="Расскажите обо всех повадках кота"></textarea>
+            <textarea class="form-unit__input form-unit__input--textarea" name="Комментарий" cols="28" rows="4" placeholder="Расскажите обо всех повадках кота"></textarea>
           </label>
         </p>
       </div>
