Восстановил нормальный логотип на главной

--- a/source/index.html
+++ b/source/index.html
@@ -37,29 +37,14 @@
   </head>
   <body>
 
-
-
   <header class="page-header page-header--index">
     <div class="page-header__wrapper container">
       <a class="page-logo page-logo--index">
-        <!--<object data="img/vector/sprite-logos.svg" type="image/svg+xml"></object>-->
-        <!--<svg class="page-logo__image" alt="Супер-кот (лого)" width="33" height="38"></svg>-->
-        <!--<svg class="page-logo__image" alt="Супер-кот (лого)" width="33" height="38">
-          <style>
-            .page-logo__image-tablet,
-            .page-logo__image-desktop {
-              display: none;
-            }
-          </style>
-          <use class="page-logo__image-mobile" xlink:href="img/vector/sprite-logos.svg#logo-mobile"></use>
-          <use class="page-logo__image-tablet" xlink:href="img/vector/sprite-logos.svg#logo-tablet"></use>
-          <use class="page-logo__image-desktop" xlink:href="img/vector/sprite-logos.svg#logo-desktop"></use>
-        </svg>-->
-        <!--<picture>
+        <picture>
           <source media="(min-width: 1300px)" srcset="img/vector/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
           <img class="page-logo__image" src="img/vector/logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
-        </picture>-->
+        </picture>
         <img class="page-logo__title page-logo__title--header" src="img/vector/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
       </a>
       <nav class="page-nav page-nav--no-js">
