Добавил ссылки на страницы соцсетей

--- a/source/index.html
+++ b/source/index.html
@@ -217,21 +217,21 @@
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="socials__list">
           <li class="socials__item">
-            <a class="socials__link socials__link--vk" href="#">Вконтакте
+            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">Вконтакте
               <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22">
                 <use xlink:href="img/vector/sprite-icons.svg#icon-vk-mobile"></use>
               </svg>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link socials__link--ig" href="#">Instagram
+            <a class="socials__link socials__link--ig" href="https://www.instagram.com/htmlacademy">Instagram
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16">
                 <use xlink:href="img/vector/sprite-icons.svg#icon-insta-mobile"></use>
               </svg>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link socials__link--fb" href="#">Facebook
+            <a class="socials__link socials__link--fb" href="https://www.facebook.com/htmlacademy">Facebook
               <svg xmlns="http://www.w3.org/2000/svg" width="10" height="19">
                 <use xlink:href="img/vector/sprite-icons.svg#icon-fb-mobile"></use>
               </svg>
