Добавил сжатые webp изображения к остальным в тегах picture

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -68,8 +68,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/chicken-small-desktop@1x.webp 1x, img/webp/chicken-small-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/chicken-small-desktop@1x.png 1x, img/raster/chicken-small-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/chicken-small-tablet@1x.webp 1x, img/webp/chicken-small-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/chicken-small-tablet@1x.png 1x, img/raster/chicken-small-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/chicken-small-mobile@1x.webp 1x, img/webp/chicken-small-mobile@2x.webp 2x">
                 <img src="img/raster/chicken-small-mobile@1x.jpg" srcset="img/raster/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Курица" width="140" height="144">
               </picture>
             </div>
@@ -97,8 +100,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/chicken-big-desktop@1x.webp 1x, img/webp/chicken-big-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/chicken-big-desktop@1x.png 1x, img/raster/chicken-big-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/chicken-big-tablet@1x.webp 1x, img/webp/chicken-big-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/chicken-big-tablet@1x.png 1x, img/raster/chicken-big-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/chicken-big-mobile@1x.webp 1x, img/webp/chicken-big-mobile@2x.webp 2x">
                 <img src="img/raster/chicken-big-mobile@1x.jpg" srcset="img/raster/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Курица" width="140" height="144">
               </picture>
             </div>
@@ -126,8 +132,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/fish-small-desktop@1x.webp 1x, img/webp/fish-small-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/fish-small-desktop@1x.png 1x, img/raster/fish-small-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/fish-small-tablet@1x.webp 1x, img/webp/fish-small-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/fish-small-tablet@1x.png 1x, img/raster/fish-small-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/fish-small-mobile@1x.webp 1x, img/webp/fish-small-mobile@2x.webp 2x">
                 <img src="img/raster/fish-small-mobile@1x.jpg" srcset="img/raster/fish-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
@@ -155,8 +164,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/fish-big-desktop@1x.webp 1x, img/webp/fish-big-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/fish-big-desktop@1x.png 1x, img/raster/fish-big-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/fish-big-tablet@1x.webp 1x, img/webp/fish-big-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/fish-big-tablet@1x.png 1x, img/raster/fish-big-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/fish-big-mobile@1x.webp 1x, img/webp/fish-big-mobile@2x.webp 2x">
                 <img src="img/raster/fish-big-mobile@1x.jpg" srcset="img/raster/fish-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000 г Рыба" width="140" height="144">
               </picture>
             </div>
@@ -184,8 +196,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/buckwheat-small-desktop@1x.webp 1x, img/webp/buckwheat-small-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/buckwheat-small-desktop@1x.png 1x, img/raster/buckwheat-small-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/buckwheat-small-tablet@1x.webp 1x, img/webp/buckwheat-small-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/buckwheat-small-tablet@1x.png 1x, img/raster/buckwheat-small-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/buckwheat-small-mobile@1x.webp 1x, img/webp/buckwheat-small-mobile@2x.webp 2x">
                 <img src="img/raster/buckwheat-small-mobile@1x.jpg" srcset="img/raster/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
@@ -213,8 +228,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/buckwheat-big-desktop@1x.webp 1x, img/webp/buckwheat-big-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/buckwheat-big-desktop@1x.png 1x, img/raster/buckwheat-big-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/buckwheat-big-tablet@1x.webp 1x, img/webp/buckwheat-big-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/buckwheat-big-tablet@1x.png 1x, img/raster/buckwheat-big-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/buckwheat-big-mobile@1x.webp 1x, img/webp/buckwheat-big-mobile@2x.webp 2x">
                 <img src="img/raster/buckwheat-big-mobile@1x.jpg" srcset="img/raster/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
@@ -242,8 +260,11 @@
           <div class="product">
             <div class="product__image">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/rice-small-desktop@1x.webp 1x, img/webp/rice-small-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/rice-small-desktop@1x.png 1x, img/raster/rice-small-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/rice-small-tablet@1x.webp 1x, img/webp/rice-small-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/rice-small-tablet@1x.png 1x, img/raster/rice-small-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/rice-small-mobile@1x.webp 1x, img/webp/rice-small-mobile@2x.webp 2x">
                 <img src="img/raster/rice-small-mobile@1x.jpg" srcset="img/raster/rice-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г Рыба" width="140" height="144">
               </picture>
             </div>
@@ -329,10 +350,10 @@
       <div class="contacts__text-wrapper">
         <div class="contacts__text-box">
           <p class="contacts__half contacts__greeting theme__block-title">
-            Приглашаем<br> к сотрудничеству дилеров!
+            Приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
           <p class="contacts__half contacts__address theme__text">
-            ул. Большая<br> Конюшенная, д. 19/8
+            ул. Большая Конюшенная, д. 19/8
             <span class="contacts__city">Санкт-Петербург</span>
           </p>
         </div>
