--- a/source/form.html
+++ b/source/form.html
@@ -197,10 +197,10 @@
     <div class="contacts__text-wrapper">
       <div class="contacts__text-box">
         <p class="contacts__half contacts__greeting theme__block-title">
-          Приглашаем<br> к сотрудничеству дилеров!
+          Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <p class="contacts__half contacts__address theme__text">
-          ул. Большая<br> Конюшенная, д. 19/8
+          ул. Большая Конюшенная, д. 19/8
           <span class="contacts__city">Санкт-Петербург</span>
         </p>
       </div>
