--- a/source/index.html
+++ b/source/index.html
@@ -65,8 +65,11 @@
           Занялся собой? Займись котом!
         </p>
         <picture class="intro__image-wrapper">
+          <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/index-can-desktop@1x.webp 1x, img/webp/index-can-desktop@2x.webp 2x">
           <source media="(min-width: 1300px)" srcset="img/raster/index-can-desktop@1x.png 1x, img/raster/index-can-desktop@2x.png 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/index-can-tablet@1x.webp 1x, img/webp/index-can-tablet@2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/raster/index-can-tablet@1x.jpg 1x, img/raster/index-can-tablet@2x.jpg 2x">
+          <source type="image/webp" srcset="img/webp/index-can-mobile@1x.webp 1x, img/webp/index-can-mobile@2x.webp 2x">
           <img class="intro__image" src="img/raster/index-can-mobile@1x.png" srcset="img/raster/index-can-mobile@2x.png 2x" alt="Внешний вид товара" width="280" height="270">
         </picture>
         <a class="intro__content intro__btn theme__btn" href="form.html">
@@ -164,15 +167,21 @@
           <div class="slider__images">
             <div class="slider__image slider__image--before">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/before-desktop@1x.webp 1x, img/webp/before-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/before-desktop@1x.png 1x, img/raster/before-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/before-tablet@1x.webp 1x, img/webp/before-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/before-tablet@1x.png 1x, img/raster/before-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/before-mobile@1x.webp 1x, img/webp/before-mobile@2x.webp 2x">
                 <img src="img/raster/before-mobile@1x.png" srcset="img/raster/before-mobile@2x.png 2x" width="320" height="240" alt="Толстый кот">
               </picture>
             </div>
             <div class="slider__image slider__image--after">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/webp/after-desktop@1x.webp 1x, img/webp/after-desktop@2x.webp 2x">
                 <source media="(min-width: 1300px)" srcset="img/raster/after-desktop@1x.png 1x, img/raster/after-desktop@2x.png 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/after-tablet@1x.webp 1x, img/webp/after-tablet@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/raster/after-tablet@1x.png 1x, img/raster/after-tablet@2x.png 2x">
+                <source type="image/webp" srcset="img/webp/after-mobile@1x.webp 1x, img/webp/after-mobile@2x.webp 2x">
                 <img src="img/raster/after-mobile@1x.png" srcset="img/raster/after-mobile@2x.png 2x" width="320" height="240" alt="Худой кот">
               </picture>
             </div>
@@ -194,10 +203,10 @@
       <div class="contacts__text-wrapper">
         <div class="contacts__text-box contacts__text-box--white">
           <p class="contacts__half contacts__greeting theme__block-title">
-            Приглашаем<br> к сотрудничеству дилеров!
+            Приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
           <p class="contacts__half contacts__address theme__text">
-            ул. Большая<br> Конюшенная, д. 19/8
+            ул. Большая Конюшенная, д. 19/8
             <span class="contacts__city">Санкт-Петербург</span>
           </p>
         </div>
