Добавил скрипт для оживления слайдера, поправил вёрстку, запрограммировал крайние положения

--- a/source/index.html
+++ b/source/index.html
@@ -165,11 +165,11 @@
             </div>
           </div>
           <div class="slider__actions">
-            <label for="before" class="slider__btn">Было</label>
+            <label for="before" class="slider__btn slider__btn--before">Было</label>
             <div class="slider__scale">
               <div class="slider__grip"></div>
             </div>
-            <label for="after" class="slider__btn">Стало</label>
+            <label for="after" class="slider__btn slider__btn--after">Стало</label>
           </div>
         </div>
       </div>
@@ -241,6 +241,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
   <script src="js/menu.min.js"></script>
   <script src="js/map.min.js"></script>
+  <script src="js/slider.min.js"></script>
 
   </body>
 </html>
