Изменил и анимировал кнопку переключения меню

--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
         </svg>
       </a>
       <nav class="page-nav page-nav--no-js">
-        <button class="page-nav__toggle" type="button">Показать меню</button>
+        <button class="page-nav__toggle menu-toggle" type="button">Показать меню</button>
         <ul class="page-nav__list page-nav__list--index">
           <li class="page-nav__item"><a class="page-nav__link page-nav__link--active">Главная</a></li>
           <li class="page-nav__item"><a class="page-nav__link" href="catalog.html">Каталог продукции</a></li>
