Минифицировал html файлы, оптимизировал загрузку шрифтов и стилей

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи - Каталог продукции</title>
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="style.min.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/picturefill.min.js"></script>
   </head>
