Поменял скрипт подключения карты на скрипт с API ключом, поправил подключаемую версию файла с тилей

--- a/source/form.html
+++ b/source/form.html
@@ -6,8 +6,8 @@
     <title>Кэт энерджи - Подбор программы</title>
     <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2">
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="style.min.css" as="style">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="style.min.css" as="style" type="text/css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.min.js"></script>
   </head>
   <body>
@@ -239,7 +239,7 @@
     </div>
   </footer>
 
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCubo6pvzkH1-z6BaeX_Dwz8SFaJXid5uM&amp;signed_in=true&amp;callback=initMap"></script>
   <script src="js/menu.min.js"></script>
   <script src="js/map.min.js"></script>
   </body>
