--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи - Каталог продукции</title>
-    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="style.min.css" as="style" type="text/css">
+    <link rel="preload" href="css/style.min.css" as="style">
+    <link rel="preload" href="js/menu.min.js" as="script">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="js/picturefill.min.js"></script>
   </head>
   <body>
 
@@ -389,8 +389,9 @@
     </div>
   </footer>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCubo6pvzkH1-z6BaeX_Dwz8SFaJXid5uM&amp;signed_in=true&amp;callback=initMap"></script>
   <script src="js/menu.min.js"></script>
   <script src="js/map.min.js"></script>
+  <script src="js/libs/picturefill.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCubo6pvzkH1-z6BaeX_Dwz8SFaJXid5uM&amp;signed_in=true&amp;callback=initialize"></script>
   </body>
 </html>
