Конкатенировал скрипты меню и карты, обернул скрипт карты, исправил таски сборки скриптов

--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи - Подбор программы</title>
     <link rel="preload" href="css/style.min.css" as="style">
-    <link rel="preload" href="js/menu.min.js" as="script">
+    <link rel="preload" href="js/main.min.js" as="script">
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
     <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
@@ -239,8 +239,7 @@
     </div>
   </footer>
 
-  <script src="js/menu.min.js"></script>
-  <script src="js/map.min.js"></script>
+  <script src="js/main.min.js"></script>
   <script src="js/libs/picturefill.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCubo6pvzkH1-z6BaeX_Dwz8SFaJXid5uM&amp;signed_in=true&amp;callback=initialize"></script>
   </body>
