Поправил размеры мелкого маркера, поправил подключение апи карт

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -391,6 +391,6 @@
 
   <script src="js/main.min.js"></script>
   <script src="js/libs/picturefill.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCubo6pvzkH1-z6BaeX_Dwz8SFaJXid5uM&amp;signed_in=true&amp;callback=initialize"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCubo6pvzkH1-z6BaeX_Dwz8SFaJXid5uM&callback=initialize" async defer></script>
   </body>
 </html>
