--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="no-js">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи - Каталог продукции</title>
+    <script>
+      document.documentElement.classList.remove("no-js");
+    </script>
     <link rel="preload" href="css/style.min.css" as="style">
     <link rel="preload" href="js/main.min.js" as="script">
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
@@ -11,11 +14,9 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-
   <div style="display: none">
     <include src="build/img/vector/sprite.svg"></include>
   </div>
-
   <header class="page-header">
     <div class="page-header__wrapper container">
       <a class="page-logo" href="index.html">
@@ -28,7 +29,7 @@
           <use xlink:href="#logo-mobile-header"></use>
         </svg>
       </a>
-      <nav class="page-nav page-nav--no-js">
+      <nav class="page-nav">
         <button class="page-nav__toggle menu-toggle" type="button">Показать меню</button>
         <ul class="page-nav__list">
           <li class="page-nav__item"><a class="page-nav__link" href="index.html">Главная</a></li>
