--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru" class="no-js">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи - Главная</title>
-    <script>
-      document.documentElement.classList.remove("no-js");
-    </script>
     <link rel="preload" href="css/style.min.css" as="style">
     <link rel="preload" href="js/main.min.js" as="script">
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
@@ -14,9 +11,11 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
+
   <div style="display: none">
     <include src="build/img/vector/sprite.svg"></include>
   </div>
+
   <header class="page-header page-header--index">
     <div class="page-header__wrapper container">
       <a class="page-logo page-logo--index">
@@ -29,7 +28,7 @@
           <use xlink:href="#logo-mobile-header"></use>
         </svg>
       </a>
-      <nav class="page-nav">
+      <nav class="page-nav page-nav--no-js">
         <button class="page-nav__toggle menu-toggle" type="button">Показать меню</button>
         <ul class="page-nav__list page-nav__list--index">
           <li class="page-nav__item"><a class="page-nav__link page-nav__link--active">Главная</a></li>
